[package]
name = "cve_2019_1065"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi", "minwindef", "ntdef", "winnt", "wingdi", "ntstatus", "processthreadsapi", "handleapi", "errhandlingapi", "tlhelp32", "memoryapi", "winsvc", "winbase", "securitybaseapi"] }
lazy_static = "1.4.0"
ntapi = "0.3.6"