[package]
name = "cve_2021_28310"
version = "0.1.0"
authors = ["jessi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi", "minwindef", "ntdef"] }
lazy_static = "1.4.0"